--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8">
             <title>ThreeJS-Exploring Space</title>
             <script src="node_modules/three/build/three.js"></script>
-            <script src="scripts/threeApp-space_cadet.js"></script>
+            <link rel="stylesheet" href="app/style.css">
     </head>
 
     <body>
@@ -19,6 +19,7 @@
           <p><span>Q:</span> Counterclockwise</p>
           <p><span>W:</span> Clockwise</p>
         </section>
-      </body>
+        <script src="app/space-cadet.js"></script>
+    </body>
 
 </html>
