working on merge

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
             <meta charset="utf-8">
             <title>ThreeJS-Exploring Space</title>
+            <script src="ThreeCSG.js"></script>
             <script src="node_modules/three/build/three.js"></script>
             <link rel="stylesheet" href="app/style.css">
     </head>
