--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 
     <head>
             <meta charset="utf-8">
-            <title>ThreeJS-Exploring Space</title>
-            <script src="ThreeCSG.js"></script>
-            <script src="node_modules/three/build/three.js"></script>
-            <link rel="stylesheet" href="app/style.css">
+            <title>ThreeJS-Exploring the Maze</title>
+            <link rel="stylesheet" href="dist/styles/style.css">
     </head>
 
     <body>
         <section class="nav-instructions" id="instructions">
-          <h1>Navigation</h1>
-          <p><span>Left arrow:</span> Left</p>
-          <p><span>Right arrow:</span> Right</p>
-          <p><span>Up arrow:</span> Up</p>
-          <p><span>Down arrow:</span> Down</p>
-          <p><span>A:</span> Forward</p>
-          <p><span>Z:</span> Back</p>
-          <p><span>Q:</span> Counterclockwise</p>
-          <p><span>W:</span> Clockwise</p>
+            <h1>Navigation</h1>
+            <p><span>Left arrow:</span> Left</p>
+            <p><span>Right arrow:</span> Right</p>
+            <p><span>Up arrow:</span> Up</p>
+            <p><span>Down arrow:</span> Down</p>
+            <p><span>A:</span> Forward</p>
+            <p><span>Z:</span> Back</p>
+            <p><span>Q:</span> Counterclockwise</p>
+            <p><span>W:</span> Clockwise</p>
+            <p><span>Shift:</span> Open red door </br>(when it fills screen)</p>
         </section>
-        <script src="app/space-cadet.js"></script>
+        <script src="dist/bundle.js"></script>
     </body>
 
 </html>
