--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p><span>Z:</span> Back</p>
             <p><span>Q:</span> Counterclockwise</p>
             <p><span>W:</span> Clockwise</p>
+            <!-- <p>Time elapsed: <span id="time-elapsed"></span> seconds</p> -->
         </section>
         <script src="dist/bundle.js"></script>
     </body>
